# open-introspection

./: .gitignore  CLAUDE.md  Makefile  README.md  blueprint.md  main.py  pyproject.toml
blog/: about.html  index.html
blog/css/: style.css
blog/drafts/: detailed-proposal.md
blog/posts/: 01-where-does-introspection-appear.html  02-building-an-llm-judge.html  03-moltbook-analysis.html  04-introspection-at-scale.html  05-sae-features-arent-causal.html  _template.html
data/: introspection_20260122_215727.json  introspection_20260122_220054.json  introspection_20260122_221009.json  introspection_20260122_221205.json  introspection_20260122_221342.json  introspection_20260122_221527.json  introspection_20260122_222216.json  introspection_20260122_222735.json  introspection_20260122_222910.json  introspection_20260122_223130.json
data/manual_sweep_analysis_20260122/: README.md
data/sweep_analysis_20260122/: introspection_20260122_214852.json  introspection_20260122_220224.json  introspection_20260122_220554.json  introspection_20260122_221834.json  introspection_20260122_222046.json  introspection_20260122_222343.json
data/sweeps/: silence.jsonl
data/sweeps_20260123/: README.md
data/sweeps_rescored_20260202/: README.md  explorer.html
docs/plans/: 2026-01-23-introspection-judge-design.md  2026-02-10-sae-feature-discovery-sweep-design.md
experiments/: 01_setup_sanity_check.py  02_concept_extraction.py  02b_layer_sweep.py  02c_strength_sweep.py  03_introspection_no_metrics.py  03_introspection_no_metrics_sweep.sh  03_introspection_test.py  EXPERIMENT_LOG.md  RESEARCH_DIRECTIONS.md  test_chat_template_integration.py
experiments/01_to_03_early_experiments/: 01_setup_sanity_check.py  03_introspection_no_metrics_sweep.sh
experiments/04_cloud_sweep/: Dockerfile  README.md  batch_config.json  config.py  modal_app.py  run_sweep.py  spawn_sweep.py  sweep.py
experiments/05_sae_introspection/: DESIGN.md  ablation_and_activation.md  ablation_workbench.ipynb  phase0_introspection_verification.ipynb
experiments/06_actvation_oracles/: config.py  ideas.md  judge_oracle.py  modal_app.py  run_oracle_sweep.py
judges/: README.md
judges/_template/: README.md
judges/introspection-detection/: README.md  __init__.py  judge.py  parsers.py  schemas.py
judges/introspection_detection/: README.md  calibration_review.html  judge.py  parsers.py  reviewer.html  schemas.py
src/open_introspection/: __init__.py  concept_extraction.py  grading.py  intentional_control.py  introspection.py  layer_sweep.py  model.py  thought_text.py
tests/: test_chat_template.py  test_sae_sweep.py  test_sweep.py
(+112 files in other folders)
