[project]
name = "open-introspection"
version = "0.1.0"
description = "Replicating introspection research with open source models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "transformers>=4.35",
    "accelerate",
    "einops",
    "jaxtyping",
    "pydantic>=2.0",
    "transformer-lens",
    "openai>=2.15.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
mac = [
    "bitsandbytes",  # for quantization
]
grading = [
    "anthropic",  # for automated grading via Claude API
    "openai>=1.0",  # for LLM judge
    "google-cloud-storage",  # for GCS uploads in cloud sweep
]
dev = [
    "pytest",
    "ipython",
    "jupyter",
    "ruff",
    "mypy",
]
all = [
    "open-introspection[mac,grading,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_introspection"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ipython",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "experiments"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ANN",    # flake8-annotations
    "RUF",    # Ruff-specific rules
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
    "B008",    # Do not perform function calls in argument defaults (needed for transformer_lens hooks)
]

[tool.ruff.lint.isort]
known-first-party = ["open_introspection"]

[tool.ruff.lint.per-file-ignores]
"experiments/*.py" = ["ARG001"]  # Allow unused arguments in experiment scripts
"src/open_introspection/introspection.py" = ["E501"]  # Long lines in prompt strings

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "transformer_lens.*",
    "transformers.*",
    "einops.*",
    "jaxtyping.*",
    "anthropic.*",
]
ignore_missing_imports = true
